--- a/style.css
+++ b/style.css
@@ -1,144 +1,183 @@
 :root {
-    --branco-principal: #FFFFFF;
-    --cinza-secundario: #C0C0C0;
-    --botao-azul: #167BD7;
-    --cor-fundo: #00030C;
-    --fonte-principal: 'Inter';    
+  --branco-principal: #FFFFFF;
+  --cinza-secundario: #C0C0C0;
+  --botao-azul: #167BD7;
+  --cor-fundo: #00030C;
+  --fonte-principal: 'Inter';    
 }
 
 body {
-    background-color: var(--cor-fundo);
-    color: var(--branco-principal);
-    font-family: var(--fonte-principal);
-    font-size: 16px;
-    font-weight: 400;
+  background-color: var(--cor-fundo);
+  color: var(--branco-principal);
+  font-family: var(--fonte-principal);
+  font-size: 16px;
+  font-weight: 400;
 }
 
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .principal {
-    background-image: url("img/Background.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    align-items: center;
-    text-align: center;
+  background-image: url("img/Background.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  align-items: center;
+  text-align: center;
 }
 
 .container {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 50% 50%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
 .container__botao {
-    background-color: var(--botao-azul);
-    border-radius: 5px;
-    padding: 1em;
-    color: var(--branco-principal);
-    display: block;
-    text-decoration: none;
-    margin-bottom: 1em;
+  background-color: var(--botao-azul);
+  border-radius: 5px;
+  padding: 1em;
+  color: var(--branco-principal);
+  display: block;
+  text-decoration: none;
+  margin-bottom: 1em;
 }
 
 .botao_secundario {
-    background-color:  transparent;
-    border: 2px solid var(--branco-principal);
+  background-color:  transparent;
+  border: 2px solid var(--branco-principal);
 }
 
 .container__aviso {
-    font-size: 12px;
-    color: var(--cinza-secundario);
+  font-size: 12px;
+  color: var(--cinza-secundario);
 }
 
 .container__titulo {
-    font-size: 28px;
-    font-weight: 700;
+  font-size: 28px;
+  font-weight: 700;
 }
 
 .container__imagem {
-    margin: 1em 0 2em 0;
+  margin: 1em 0 2em 0;
 }
 
 .container__caixa {
-    margin: 0 6em;
+  margin: 0 6em;
 }
 
 .secundario__imagem {
-    width: 80%;    
+  width: 80%;    
 }
 
 .secundario {
-    align-items: center;
-    margin: 0 10em;
+  align-items: center;
+  margin: 0 10em;
 }
 
 .descricao__titulo {
-    font-weight: 700;
-    font-size: 48px;
-    color: var(--branco-principal);
-    margin-bottom: 0.1em;
+  font-weight: 700;
+  font-size: 48px;
+  color: var(--branco-principal);
+  margin-bottom: 0.1em;
 }
 
-.descricao__texto{
-    color: var(--cinza-secundario);
+.descricao__texto {
+  color: var(--cinza-secundario);
 }
 
 .secundario__botao {
-    display: inline-block;
-    margin-top: 1em;
+  display: inline-block;
+  margin-top: 1em;
 }
 
 .container__descricao {
-    padding: 2em;
+  padding: 2em;
 }
 
 .dispositivos__lista {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    margin: 5em 0;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  margin: 5em 0;
 }
 
 .dispositivos {
-    text-align: center;
+  text-align: center;
 }
 
 .dispositivos__titulo {
-    font-size: 48px;
-    color: var(--branco-principal);
+  font-size: 48px;
+  color: var(--branco-principal);
 }
 
 .lista__item {
-    font-size: 32px;
-    color: var(--branco-principal);
+  font-size: 32px;
+  color: var(--branco-principal);
 }
 
 .rodape__lista {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    margin-top: 1em;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  margin-top: 1em;
 }
 
 .lista__link a {
-    text-decoration: none;
-    color: var(--branco-principal);
-    margin-left: 1em;
+  text-decoration: none;
+  color: var(--branco-principal);
+  margin-left: 1em;
 }
 
 .rodape__texto {
-    margin: 1em 0;
-    color: var(--cinza-secundario);
-    font-size: 14px;
+  margin: 1em 0;
+  color: var(--cinza-secundario);
+  font-size: 14px;
 }
 
 .rodape {
-    text-align: center;
-    margin: 5em 3em;
+  text-align: center;
+  margin: 5em 3em;
 }
+
 .lista__link a:hover {
-    color: var(--botao-azul);
+  color: var(--botao-azul);
+}
+
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: 100%;
+  }
+  
+  .secundario {
+    margin: 0;
+  }
+  
+  .container__caixa {
+    margin: 0;
+  }
+  
+  .descricao__titulo {
+    font-size: 36px;
+  }
+  
+  .secundario__imagem {
+    width: 100%;
+  }
+  
+  .dispositivos__lista {
+    margin: 2em 0;
+  }
+  
+  .dispositivos__titulo {
+    font-size: 36px;
+  }
+  
+  .lista__item {
+    font-size: 24px;
+  }
+  
+  .rodape {
+    margin: 2em;
+  }
 }
