--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --cinza-secundario: #C0C0C0;
   --botao-azul: #167BD7;
   --cor-fundo: #00030C;
-  --fonte-principal: 'Inter';    
+  --fonte-principal: 'Inter';
 }
 
 body {
@@ -12,67 +12,54 @@ body {
   font-family: var(--fonte-principal);
   font-size: 16px;
   font-weight: 400;
-}
-
-* {
   margin: 0;
   padding: 0;
 }
 
-.principal {
-  background-image: url("img/Background.png");
-  background-repeat: no-repeat;
-  background-size: contain;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
-  text-align: center;
+  padding: 2em;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.container {
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 50% 50%;
+.container__titulo {
+  font-size: 28px;
+  font-weight: 700;
+  margin-bottom: 1em;
+}
+
+.container__imagem {
+  margin: 1em 0 2em 0;
+  max-width: 100%;
+}
+
+.container__caixa {
+  margin: 0 auto;
+  text-align: center;
 }
 
 .container__botao {
   background-color: var(--botao-azul);
   border-radius: 5px;
-  padding: 1em;
+  padding: 1em 2em;
   color: var(--branco-principal);
-  display: block;
+  display: inline-block;
   text-decoration: none;
   margin-bottom: 1em;
 }
 
 .botao_secundario {
-  background-color:  transparent;
+  background-color: transparent;
   border: 2px solid var(--branco-principal);
 }
 
 .container__aviso {
   font-size: 12px;
   color: var(--cinza-secundario);
-}
-
-.container__titulo {
-  font-size: 28px;
-  font-weight: 700;
-}
-
-.container__imagem {
-  margin: 1em 0 2em 0;
-}
-
-.container__caixa {
-  margin: 0 6em;
-}
-
-.secundario__imagem {
-  width: 80%;    
-}
-
-.secundario {
-  align-items: center;
-  margin: 0 10em;
 }
 
 .descricao__titulo {
@@ -84,22 +71,16 @@ body {
 
 .descricao__texto {
   color: var(--cinza-secundario);
+  margin-bottom: 2em;
+}
+
+.secundario__imagem {
+  max-width: 100%;
 }
 
 .secundario__botao {
   display: inline-block;
   margin-top: 1em;
-}
-
-.container__descricao {
-  padding: 2em;
-}
-
-.dispositivos__lista {
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  margin: 5em 0;
 }
 
 .dispositivos {
@@ -109,11 +90,18 @@ body {
 .dispositivos__titulo {
   font-size: 48px;
   color: var(--branco-principal);
+  margin-bottom: 1em;
 }
 
 .lista__item {
   font-size: 32px;
   color: var(--branco-principal);
+  margin-bottom: 0.5em;
+}
+
+.rodape {
+  text-align: center;
+  padding: 2em;
 }
 
 .rodape__lista {
@@ -135,26 +123,18 @@ body {
   font-size: 14px;
 }
 
-.rodape {
-  text-align: center;
-  margin: 5em 3em;
-}
-
 .lista__link a:hover {
   color: var(--botao-azul);
 }
 
 @media (max-width: 768px) {
   .container {
-    grid-template-columns: 100%;
-  }
-  
-  .secundario {
-    margin: 0;
+    flex-direction: column;
+    align-items: center;
   }
   
   .container__caixa {
-    margin: 0;
+    margin: 2em 0;
   }
   
   .descricao__titulo {
@@ -162,11 +142,7 @@ body {
   }
   
   .secundario__imagem {
-    width: 100%;
-  }
-  
-  .dispositivos__lista {
-    margin: 2em 0;
+    max-width: 100%;
   }
   
   .dispositivos__titulo {
@@ -175,9 +151,5 @@ body {
   
   .lista__item {
     font-size: 24px;
-  }
-  
-  .rodape {
-    margin: 2em;
   }
 }
