--- a/style.css
+++ b/style.css
@@ -144,4 +144,13 @@ ul {
   .lista__item {
     font-size: calc(16px + 1vmin);
   }
+
+  .rodape__lista {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .lista__link a {
+    margin: 0.5em 0;
+  }
 }
