--- a/style.css
+++ b/style.css
@@ -1,156 +1,198 @@
 :root {
-  --branco-principal: #FFFFFF;
-  --cinza-secundario: #C0C0C0;
-  --botao-azul: #167BD7;
-  --cor-fundo: #00030C;
-  --fonte-principal: 'Inter';
+    --branco-principal: #FFFFFF;
+    --cinza-secundario: #C0C0C0;
+    --botao-azul: #167BD7;
+    --cor-fundo: #00030C;
+    --fonte-principal: 'Inter';    
 }
 
 body {
-  background-color: var(--cor-fundo);
-  color: var(--branco-principal);
-  font-family: var(--fonte-principal);
-  font-size: 16px;
-  font-weight: 400;
-  margin: 0;
-  padding: 0;
-  line-height: 1.6;
+    background-color: var(--cor-fundo);
+    color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+}
+
+.principal {
+    background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    align-items: center;
+    text-align: center;
 }
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2em;
-  max-width: 1200px;
-  margin: 0 auto;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
-.container__titulo {
-  font-size: calc(18px + 2vmin);
-  font-weight: 700;
-  margin-bottom: 1em;
-}
-
-.container__imagem,
-.secundario__imagem {
-  margin: 1em 0 2em 0;
-  max-width: 100%;
-  height: auto;
-}
-
-.container__caixa {
-  margin: 0 auto;
-  text-align: center;
-  padding: 1em;
-}
-
-.container__botao,
-.secundario__botao {
-  background-color: var(--botao-azul);
-  border-radius: 5px;
-  padding: 1em 2em;
-  color: var(--branco-principal);
-  display: block;
-  text-decoration: none;
-  margin: 0.5em auto;
+.container__botao {
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
+    margin-bottom: 1em;
 }
 
 .botao_secundario {
-  background-color: transparent;
-  border: 2px solid var(--branco-principal);
+    background-color:  transparent;
+    border: 2px solid var(--branco-principal);
 }
 
 .container__aviso {
-  font-size: calc(10px + 0.5vmin);
-  color: var(--cinza-secundario);
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+
+.container__titulo {
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.container__imagem {
+    margin: 1em 0 2em 0;
+}
+
+.container__caixa {
+    margin: 0 6em;
+}
+
+.secundario__imagem {
+    width: 80%;    
+}
+
+.secundario {
+    align-items: center;
+    margin: 0 10em;
 }
 
 .descricao__titulo {
-  font-weight: 700;
-  font-size: calc(24px + 1vmin);
-  color: var(--branco-principal);
-  margin-bottom: 0.1em;
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
 }
 
-.descricao__texto {
-  color: var(--cinza-secundario);
-  margin-bottom: 2em;
+.descricao__texto{
+    color: var(--cinza-secundario);
+}
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao {
+    padding: 2em;
+}
+
+.dispositivos__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
 }
 
 .dispositivos {
-  text-align: center;
+    text-align: center;
 }
 
 .dispositivos__titulo {
-  font-size: calc(24px + 1vmin);
-  color: var(--branco-principal);
-  margin-bottom: 1em;
+    font-size: 48px;
+    color: var(--branco-principal);
 }
 
 .lista__item {
-  font-size: calc(18px + 1vmin);
-  color: var(--branco-principal);
-  margin-bottom: 0.5em;
-}
-
-ul {
-  list-style-type: none;
-}
-
-.rodape {
-  background-color: var(--botao-azul);
-  color: var(--branco-principal);
-  padding: 3em;
-  text-align: center;
+    font-size: 32px;
+    color: var(--branco-principal);
 }
 
 .rodape__lista {
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  padding: 1em 0;
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
 }
 
 .lista__link a {
-  text-decoration: none;
-  color: var(--branco-principal);
-  margin-left: 1em;
+    text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 1em;
 }
 
 .rodape__texto {
-  margin: 1em 0;
-  color: var(--cinza-secundario);
-  font-size: calc(10px + 0.5vmin);
+    margin: 1em 0;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+}
+
+.rodape {
+    text-align: center;
+    margin: 5em 3em;
 }
 
 .lista__link a:hover {
-  color: var(--branco-principal);
+    color: var(--botao-azul);
 }
 
 @media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-    align-items: center;
-    padding: 1em;
-  }
-  
-  .descricao__titulo,
-  .dispositivos__titulo {
-    font-size: calc(18px + 1vmin);
-  }
-  
-  .lista__item {
-    font-size: calc(16px + 1vmin);
-  }
+    .container {
+        grid-template-columns: 1fr;
+    }
 
-  .rodape__lista {
-    flex-direction: column;
-    align-items: center;
-  }
+    .container__titulo {
+        font-size: calc(18px + 2vmin);
+    }
 
-  .lista__link a {
-    margin: 0.5em 0;
-  }
+    .container__imagem,
+    .secundario__imagem {
+        margin: 1em 0 2em 0;
+        width: 100%;
+        height: auto;
+    }
+
+    .container__caixa {
+        margin: 0 auto;
+        text-align: center;
+        padding: 1em;
+    }
+
+    .secundario {
+        margin: 0 2em;
+    }
+
+    .descricao__titulo {
+        font-size: calc(24px + 1vmin);
+    }
+
+    .descricao__texto {
+        font-size: calc(14px + 1vmin);
+    }
+
+    .dispositivos__titulo {
+        font-size: calc(24px + 1vmin);
+    }
+
+    .lista__item {
+        font-size: calc(18px + 1vmin);
+    }
+
+    .rodape__lista {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .lista__link a {
+        margin: 0.5em 0;
+    }
+
+    .rodape {
+        margin: 2em 1em;
+    }
 }
