--- a/style.css
+++ b/style.css
@@ -1,227 +1,238 @@
 :root {
-    --branco-principal: #FFFFFF;
-    --cinza-secundario: #C0C0C0;
-    --botao-azul: #167BD7;
-    --cor-fundo: #00030C;
-    --fonte-principal: 'Inter';
+  --branco-principal: #FFFFFF;
+  --cinza-secundario: #C0C0C0;
+  --botao-azul: #167BD7;
+  --cor-fundo: #00030C;
+  --fonte-principal: 'Inter';
 }
 
 body {
-    background-color: var(--cor-fundo);
-    color: var(--branco-principal);
-    font-family: var(--fonte-principal);
-    font-size: 16px;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-    overflow: auto;
+  background-color: var(--cor-fundo);
+  color: var(--branco-principal);
+  font-family: var(--fonte-principal);
+  font-size: 16px;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
 }
 
 .principal {
-    background-image: url("img/Background.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    align-items: center;
-    text-align: center;
+  background-image: url("img/Background.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  align-items: center;
+  text-align: center;
 }
 
 .container {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    overflow: auto;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  overflow: auto;
 }
 
 .container__botao {
-    background-color: var(--botao-azul);
-    border-radius: 5px;
-    padding: 1em;
-    color: var(--branco-principal);
-    display: block;
-    text-decoration: none;
-    margin-bottom: 1em;
+  background-color: var(--botao-azul);
+  border-radius: 5px;
+  padding: 1em;
+  color: var(--branco-principal);
+  display: block;
+  text-decoration: none;
+  margin-bottom: 1em;
 }
 
 .botao_secundario {
-    background-color:  transparent;
-    border: 2px solid var(--branco-principal);
+  background-color:  transparent;
+  border: 2px solid var(--branco-principal);
 }
 
 .container__aviso {
-    font-size: 12px;
-    color: var(--cinza-secundario);
+  font-size: 12px;
+  color: var(--cinza-secundario);
 }
 
 .container__titulo {
-    font-size: 28px;
-    font-weight: 700;
+  font-size: 28px;
+  font-weight: 700;
 }
 
 .container__imagem {
-    margin: 1em 0 2em 0;
+  margin: 1em 0 2em 0;
 }
 
 .container__caixa {
-    margin: 0 6em;
+  margin: 0 6em;
 }
 
 .secundario__imagem {
-    width: 80%;    
+  width: 80%;    
 }
 
 .secundario {
-    align-items: center;
-    margin: 0 10em;
+  align-items: center;
+  margin: 0 10em;
 }
 
 .descricao__titulo {
-    font-weight: 700;
-    font-size: 48px;
-    color: var(--branco-principal);
-    margin-bottom: 0.1em;
+  font-weight: 700;
+  font-size: 48px;
+  color: var(--branco-principal);
+  margin-bottom: 0.1em;
 }
 
 .descricao__texto{
-    color: var(--cinza-secundario);
+  color: var(--cinza-secundario);
 }
 
 .secundario__botao {
-    display: inline-block;
-    margin-top: 1em;
+  display: inline-block;
+  margin-top: 1em;
 }
 
 .container__descricao {
-    padding: 2em;
+  padding: 2em;
 }
 
 .dispositivos__lista {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    margin: 5em 0;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  margin: 5em 0;
 }
 
 .dispositivos {
-    text-align: center;
+  text-align: center;
 }
 
 .dispositivos__titulo {
-    font-size: 48px;
-    color: var(--branco-principal);
+  font-size: 48px;
+  color: var(--branco-principal);
 }
 
 .lista__item {
-    font-size: 32px;
-    color: var(--branco-principal);
+  font-size: 32px;
+  color: var(--branco-principal);
 }
 
 .rodape__lista {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    margin-top: 1em;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  margin-top: 1em;
 }
 
 .lista__link a {
-    text-decoration: none;
-    color: var(--branco-principal);
-    margin-left: 1em;
+  text-decoration: none;
+  color: var(--branco-principal);
+  margin-left: 1em;
 }
 
 .rodape__texto {
-    margin: 1em 0;
-    color: var(--cinza-secundario);
-    font-size: 14px;
+  margin: 1em 0;
+  color: var(--cinza-secundario);
+  font-size: 14px;
 }
 
 .rodape {
-    text-align: center;
-    margin: 5em 3em;
+  text-align: center;
+  margin: 5em 3em;
 }
 
 .lista__link a:hover {
-    color: var(--botao-azul);
+  color: var(--botao-azul);
 }
 
 @media (max-width: 768px) {
-    .container {
-        grid-template-columns: 1fr;
-    }
+  .container {
+    grid-template-columns: 1fr;
+  }
 
-    .container__titulo {
-        font-size: calc(18px + 2vmin);
-    }
+  .container__titulo {
+    font-size: calc(18px + 2vmin);
+  }
 
-    .container__imagem,
-    .secundario__imagem {
-        margin: 1em 0 2em 0;
-        width: 100%;
-        height: auto;
-    }
+  .container__imagem,
+  .secundario__imagem {
+    margin: 1em 0 2em 0;
+    width: 100%;
+    height: auto;
+  }
 
-    .container__caixa {
-        margin: 0 auto;
-        text-align: center;
-        padding: 1em;
-    }
+  .container__caixa {
+    margin: 0 auto;
+    text-align: center;
+    padding: 1em;
+  }
 
-    .secundario {
-        margin: 0 2em;
-    }
+  .secundario {
+    margin: 0 2em;
+  }
 
-    .descricao__titulo {
-        font-size: calc(24px + 1vmin);
-    }
+  .descricao__titulo {
+    font-size: calc(24px + 1vmin);
+  }
 
-    .descricao__texto {
-        font-size: calc(14px + 1vmin);
-    }
+  .descricao__texto {
+    font-size: calc(14px + 1vmin);
+  }
 
-    .dispositivos__titulo {
-        font-size: calc(24px + 1vmin);
-    }
+  .dispositivos__titulo {
+    font-size: calc(24px + 1vmin);
+  }
 
-    .lista__item {
-        font-size: calc(18px + 1vmin);
-    }
+  .lista__item {
+    font-size: calc(18px + 1vmin);
+  }
 
-    .rodape__lista {
-        flex-direction: column;
-        align-items: center;
-    }
+  .rodape__lista {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .lista__link a {
-        margin: 0.5em 0;
-    }
+  .lista__link a {
+    margin: 0.5em 0;
+  }
 
-    .rodape {
-        margin: 2em 1em;
-    }
+  .rodape {
+    margin: 2em 1em;
+  }
 
-    /* Novas regras adicionadas para centralização */
+  /* Novas regras adicionadas para centralização */
 
-    .principal {
-        justify-content: center;
-    }
+  .principal {
+    justify-content: center;
+  }
 
-    .container,
-    .secundario {
-        margin: 0;
-    }
+  .container,
+  .secundario {
+    margin: 0;
+  }
 
-    .descricao__titulo,
-    .descricao__texto,
-    .dispositivos__titulo,
-    .lista__item,
-    .rodape__texto {
-        text-align: center;
-    }
+  .descricao__titulo,
+  .descricao__texto,
+  .dispositivos__titulo,
+  .lista__item,
+  .rodape__texto {
+    text-align: center;
+  }
 
-    .dispositivos__lista {
-        justify-content: center;
-    }
+  .dispositivos__lista {
+    justify-content: center;
+  }
 
-    .rodape__lista {
-        justify-content: center;
-    }
+  .rodape__lista {
+    justify-content: center;
+  }
+
+  /* Modificações para dispositivos em coluna */
+
+  .dispositivos__lista li {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .dispositivos__lista li:not(:last-child) {
+    margin-bottom: 1em;
+  }
 }
